--- a/LanguageSchool/Views/Course/Index.cshtml
+++ b/LanguageSchool/Views/Course/Index.cshtml
@@ -64,8 +64,7 @@
     </div>
     <div class="col-md-4">
         @Html.PagedListPager(Model, page => Url.Action("Index",
-            new { sortColumn = ViewBag.sortColumn, sortDirection = ViewBag.sortDirection, page = new { page } }))
-        @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
+            new { sortColumn = ViewBag.sortColumn, sortDirection = ViewBag.sortDirection, page }))
     </div>
     <div class="col-md-4">
     </div>
