Porządki w bazie, podciągnięcie startdate do podglądu kursu

--- a/LanguageSchool/Views/Course/Details.cshtml
+++ b/LanguageSchool/Views/Course/Details.cshtml
@@ -10,11 +10,11 @@
         <dl class="jumbotron">
 
             <dt>
-                Data
+                Data rozpoczęcia
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.CreationDate)
+                @Html.DisplayFor(model => model.StartDate)
             </dd>
 
             <dt>
