--- a/LanguageSchool/Views/Shared/_Layout.cshtml
+++ b/LanguageSchool/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
         <div class="col-md-1">
         </div>
         <a class="navbar-brand" padding="15px" href="@Url.Action("Index", "Home")">
-            <img src="~/images/Logo.png" alt="Site Logo" style="height:25%; width: 25%" />
+            @Html.Partial("_MenuLogo")
         </a>
         <div class="container">
             <div class="navbar-header">
