--- a/LanguageSchool/Views/Course/Index.cshtml
+++ b/LanguageSchool/Views/Course/Index.cshtml
@@ -60,10 +60,10 @@
         </table>        
     </div>    
 
-    <div class="col-md-4">
+    <div class="col-md-5">
     </div>
-    <div class="col-md-4">
-        @Html.PagedListPager(Model, page => Url.Action("Index",
+    <div class="col-md-3">
+        @Html.PagedListPager(Model, page => Url.Action("List",
             new { sortColumn = ViewBag.sortColumn, sortDirection = ViewBag.sortDirection, page }))
     </div>
     <div class="col-md-4">
