--- a/LanguageSchool/Views/Course/List.cshtml
+++ b/LanguageSchool/Views/Course/List.cshtml
@@ -1,133 +1,72 @@
-﻿@*
-
-    @using PagedList.Mvc;
-    @model PagedList.IPagedList<LanguageSchool.Models.ViewModels.CourseViewModel>
-
-    @{
-        Layout = "~/Views/Shared/_Layout.cshtml";
-    }
-
-    <!DOCTYPE html>
-
-    <html>
-    <head>
-        <meta name="viewport" content="width=device-width" />
-        <title>View</title>
-    </head>
-    <body>
-        <div class="jumbotron">
-            <table class="table">
-                <tr>
-                    <th>
-                        @Html.ActionLink("Rozpoczęcie", "Index", new { sortColumn = "startDate", sortDirection = ViewBag.sortDirection, page = 1 },
-                             new { style = "text-decoration:none; color:black" })
-                    </th>
-                    <th>
-                        @Html.ActionLink("Kurs", "Index", new { sortColumn = "name", sortDirection = ViewBag.sortDirection, page = 1 },
-                             new { style = "text-decoration:none; color:black" })
-                    </th>
-                    <th>
-                        @Html.ActionLink("Poziom", "Index", new { sortColumn = "proficencyLevel", sortDirection = ViewBag.sortDirection, page = 1 },
-                             new { style = "text-decoration:none; color:black" })
-                    </th>
-                    <th>
-                        Opis
-                    </th>
-                    <th>
-                        Liczba godzin
-                    </th>
-                </tr>
-
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>
-                            @item.StartDate
-                        </td>
-                        <td>
-                            @Html.ActionLink(item.Name, "Details", new { id = item.Id })
-                        </td>
-                        <td>
-                            @item.LanguageProficency
-                        </td>
-                        <td>
-                            @item.ShortDescription
-                        </td>
-                        <td>
-                            @item.NumberOfHours
-                        </td>
-                    </tr>
-                }
-
-            </table>
-        </div>
-
-        <div class="col-md-4">
-        </div>
-        <div class="col-md-4">
-            @Html.PagedListPager(Model, page => Url.Action("Index",
-                new { sortColumn = ViewBag.sortColumn, sortDirection = ViewBag.sortDirection, page }))
-        </div>
-        <div class="col-md-4">
-        </div>
-    </body>
-    </html>
-*@
-
-@model IEnumerable<LanguageSchool.Models.Course>
+﻿@using PagedList.Mvc;
+@model PagedList.IPagedList<LanguageSchool.Models.Course>
 
 @{
     ViewBag.Title = "SecretaryIndex";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>SecretaryIndex</h2>
+<div class="container w-100 h-100">
+    <div class="row align-items-center h-100">
+        <div class="col-md-3">
+            <div>
+                <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Create", "Course")'">Utwórz nowy</button>
+            </div>
+        </div>
+        <div class="col-md-9">
+        </div>
+    </div>
+</div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.IsDeleted)
+            @Html.ActionLink("Aktywny", "List", new { sortColumn = "isActive", sortDirection = ViewBag.sortDirection, page = 1 },
+                new { style = "text-decoration:none; color:black" })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.CreationDate)
+            Data utworzenia wpisu
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DeletionDate)
+            @Html.ActionLink("Nazwa", "List", new { sortColumn = "name", sortDirection = ViewBag.sortDirection, page = 1 },
+                new { style = "text-decoration:none; color:black" })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            Opis
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.ActionLink("Poziom", "List", new { sortColumn = "proficencyLevel", sortDirection = ViewBag.sortDirection, page = 1 },
+                new { style = "text-decoration:none; color:black" })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.IsActive)
+            @Html.ActionLink("Rozpoczęcie", "List", new { sortColumn = "startDate", sortDirection = ViewBag.sortDirection, page = 1 },
+                new { style = "text-decoration:none; color:black" })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.StartDate)
+            @Html.ActionLink("Zakończenie", "List", new { sortColumn = "endDate", sortDirection = ViewBag.sortDirection, page = 1 },
+                new { style = "text-decoration:none; color:black" })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.NumberOfHours)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LanguageProficency.Name)
+            Liczba godzin
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
+
+    var rowBG = "white";
+
+    if (!item.IsActive)
+    {
+        rowBG = "lightgray";
+    }
+
+    <tr bgcolor=@rowBG>
         <td>
-            @Html.DisplayFor(modelItem => item.IsDeleted)
+            @Html.DisplayFor(modelItem => item.IsActive)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.CreationDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DeletionDate)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
@@ -136,23 +75,32 @@
             @Html.DisplayFor(modelItem => item.Description)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.IsActive)
+            @Html.DisplayFor(modelItem => item.LanguageProficency.Name)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.StartDate)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.EndDate)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.NumberOfHours)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.LanguageProficency.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Edytuj", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Zdezaktywuj", "Deactivate", new { id = item.Id }) |
+            @Html.ActionLink("Usuń", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
 
 </table>
+
+<div class="col-md-6">
+</div>
+<div class="col-md-2">
+    @Html.PagedListPager(Model, page => Url.Action("List",
+            new { sortColumn = ViewBag.sortColumn, sortDirection = ViewBag.sortDirection, page }))
+</div>
+<div class="col-md-4">
+</div>
