--- a/LanguageSchool/Views/Course/List.cshtml
+++ b/LanguageSchool/Views/Course/List.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container w-100 h-100">
+@*<div class="container w-100 h-100">
     <div class="row align-items-center h-100">
         <div class="col-md-3">
             <div>
@@ -16,9 +16,9 @@
         <div class="col-md-9">
         </div>
     </div>
-</div>
+</div>*@
 
-<table class="table">
+<table class="table table-striped table-bordered">
     <tr>
         <th>
             @Html.ActionLink("Aktywny", "List", new { sortColumn = "isActive", sortDirection = ViewBag.sortDirection, page = 1 },
@@ -49,7 +49,6 @@
         <th>
             Liczba godzin
         </th>
-        <th></th>
     </tr>
 
 @foreach (var item in Model) {
@@ -58,7 +57,7 @@
 
     if (!item.IsActive)
     {
-        rowBG = "lightgray";
+        rowBG = "pink";
     }
 
     <tr bgcolor=@rowBG>
