--- a/LanguageSchool/Views/Course/List.cshtml
+++ b/LanguageSchool/Views/Course/List.cshtml
@@ -6,85 +6,106 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<table class="table table-striped">
-    <tr>
-        <th>
-            <a href='@Url.Action("List", "Course", new { sortColumn = "isActive", sortDirection = ViewBag.sortDirection, page = 1 })'
-               style = "text-decoration:none; color:black" >
-                <span class="glyphicon glyphicon-asterisk"></span>
-            </a>
-        </th>
-        <th>
-            @Html.ActionLink("Utworzono", "List", new { sortColumn = "creationDate", sortDirection = ViewBag.sortDirection, page = 1 },
-                new { style = "text-decoration:none; color:black" })
-        </th>
-        <th>
-            @Html.ActionLink("Nazwa", "List", new { sortColumn = "name", sortDirection = ViewBag.sortDirection, page = 1 },
-                new { style = "text-decoration:none; color:black" })
-        </th>
-        <th>
-            Opis
-        </th>
-        <th>
-            @Html.ActionLink("Poziom", "List", new { sortColumn = "proficencyLevel", sortDirection = ViewBag.sortDirection, page = 1 },
-                new { style = "text-decoration:none; color:black" })
-        </th>
-        <th>
-            @Html.ActionLink("Rozpoczęcie", "List", new { sortColumn = "startDate", sortDirection = ViewBag.sortDirection, page = 1 },
-                new { style = "text-decoration:none; color:black" })
-        </th>
-        <th>
-            @Html.ActionLink("Zakończenie", "List", new { sortColumn = "endDate", sortDirection = ViewBag.sortDirection, page = 1 },
-                new { style = "text-decoration:none; color:black" })
-        </th>
-        <th>
-            Liczba godzin
-        </th>
-    </tr>
-
-@foreach (var item in Model) {
-
-    var fontColor = "black";
-
-    if (!item.IsActive)
-    {
-        fontColor = "silver";
-    }
-
-    <tr style="color: @fontColor">
-        <td>
-        </td>
-        <td>
-            @item.CreationDate.ToString("yyyy/MM/dd")
-        </td>
-        <td>
-            @Html.ActionLink(item.Name, "Edit", new { id = item.Id })
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LanguageProficency.Name)
-        </td>
-        <td>
-            @item.StartDate.ToString("yyyy/MM/dd")
-        </td>
-        <td>
-            @item.EndDate.ToString("yyyy/MM/dd")
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NumberOfHours)
-        </td>
-    </tr>
-}
-
-</table>
-
-<div class="col-md-6">
+<div class="row col-md-12">
+    <div class="col-md-4">
+    </div>
+    <div class="col-md-4">
+        @Html.Label("Szukana w tabeli fraza")
+        @Html.TextBox("SearchString")
+    </div>
+    <div class="col-md-3">
+        @Html.Label("Kursy")
+        <font color="gray">
+            aktywne @Html.CheckBox("ShowActivated")
+            nieaktywne @Html.CheckBox("ShowDeactivated")
+        </font>
+    </div>
+    <div class="col-md-1">
+        <input type="submit" value="Szukaj"/>
+    </div>
 </div>
-<div class="col-md-2">
-    @Html.PagedListPager(Model, page => Url.Action("List",
+
+<p/>
+
+    @*<div class="col-md-12">
+        </div>*@
+    @*<div class="jumbotron">
+        </div>*@
+
+<div class="col-md-12">
+    <table class="table table-striped table-bordered col-md-6">
+        <tr>
+            <th>
+                @Html.ActionLink("Utworzono", "List", new { sortColumn = "creationDate", sortDirection = ViewBag.sortDirection, page = 1 },
+                new { style = "text-decoration:none; color:black" })
+            </th>
+            <th>
+                @Html.ActionLink("Nazwa", "List", new { sortColumn = "name", sortDirection = ViewBag.sortDirection, page = 1 },
+                new { style = "text-decoration:none; color:black" })
+            </th>
+            <th>
+                Opis
+            </th>
+            <th>
+                @Html.ActionLink("Poziom", "List", new { sortColumn = "proficencyLevel", sortDirection = ViewBag.sortDirection, page = 1 },
+                new { style = "text-decoration:none; color:black" })
+            </th>
+            <th>
+                @Html.ActionLink("Rozpoczęcie", "List", new { sortColumn = "startDate", sortDirection = ViewBag.sortDirection, page = 1 },
+                new { style = "text-decoration:none; color:black" })
+            </th>
+            <th>
+                @Html.ActionLink("Zakończenie", "List", new { sortColumn = "endDate", sortDirection = ViewBag.sortDirection, page = 1 },
+                new { style = "text-decoration:none; color:black" })
+            </th>
+            <th>
+                Liczba godzin
+            </th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+
+            var fontColor = "black";
+
+            if (!item.IsActive)
+            {
+                fontColor = "silver";
+            }
+
+            <tr style="color: @fontColor">
+                <td>
+                    @item.CreationDate.ToString("yyyy/MM/dd")
+                </td>
+                <td>
+                    @Html.ActionLink(item.Name, "Edit", new { id = item.Id })
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LanguageProficency.Name)
+                </td>
+                <td>
+                    @item.StartDate.ToString("yyyy/MM/dd")
+                </td>
+                <td>
+                    @item.EndDate.ToString("yyyy/MM/dd")
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NumberOfHours)
+                </td>
+            </tr>
+        }
+
+    </table>
+</div>
+
+    <div class="col-md-6">
+    </div>
+    <div class="col-md-2">
+        @Html.PagedListPager(Model, page => Url.Action("List",
             new { sortColumn = ViewBag.sortColumn, sortDirection = ViewBag.sortDirection, page }))
-</div>
-<div class="col-md-4">
-</div>
+    </div>
+    <div class="col-md-4">
+    </div>
