--- a/LanguageSchool/Views/Course/List.cshtml
+++ b/LanguageSchool/Views/Course/List.cshtml
@@ -7,16 +7,16 @@
 }
 
 <div class="row col-md-12">
-    <div class="col-md-4 ">
+    <div class="col-md-3">
         @Html.Label("Kursy")
         <font color="gray">
             aktywne @Html.CheckBox("ShowActivated")
             nieaktywne @Html.CheckBox("ShowDeactivated")
         </font>
     </div>
-    <div class="col-md-7">
-        @Html.Label("Szukana w tabeli fraza")
-        @Html.TextBox("SearchString", null, new { @style = "width:500px" })
+    <div class="col-md-8">
+        @Html.Label("Szukana fraza")
+        @Html.TextBox("SearchString", null, new { @style = "width:550px" })
     </div>
     <div style="float:right;">
         <input type="submit" value="Szukaj"/>
