Poprawne rozwiązanie problemu szerokości textboxa

--- a/LanguageSchool/Views/Course/List.cshtml
+++ b/LanguageSchool/Views/Course/List.cshtml
@@ -16,7 +16,7 @@
     </div>
     <div class="col-md-8">
         @Html.Label("Szukana fraza")
-        @Html.TextBox("SearchString", null, new { @style = "width:550px" })
+        @Html.TextBox("SearchString", null, new { @class = "widetextarea", @style = "width:550px" })
     </div>
     <div style="float:right;">
         <input type="submit" value="Szukaj"/>
