--- a/LanguageSchool/Views/Course/List.cshtml
+++ b/LanguageSchool/Views/Course/List.cshtml
@@ -6,29 +6,27 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@using (Html.BeginForm())
+{
 <div class="row col-md-12">
     <div class="col-md-3">
         @Html.Label("Kursy")
         <font color="gray">
-            aktywne @Html.CheckBox("ShowActivated")
-            nieaktywne @Html.CheckBox("ShowDeactivated")
+            aktywne @Html.CheckBox("showActivated", true)
+            nieaktywne @Html.CheckBox("showDeactivated", false)
         </font>
     </div>
     <div class="col-md-8">
         @Html.Label("Szukana fraza")
-        @Html.TextBox("SearchString", null, new { @class = "widetextarea", @style = "width:550px" })
+        @Html.TextBox("searchString", null, new { @class = "widetextarea", @style = "width:550px" })
     </div>
     <div style="float:right;">
         <input type="submit" value="Szukaj"/>
     </div>
 </div>
+}
 
 <p/>
-
-    @*<div class="col-md-12">
-        </div>*@
-    @*<div class="jumbotron">
-        </div>*@
 
 <div class="col-md-12">
     <table class="table table-striped table-bordered">
