--- a/LanguageSchool/Views/Course/List.cshtml
+++ b/LanguageSchool/Views/Course/List.cshtml
@@ -6,109 +6,111 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm())
-{
-    <div class="row col-md-12">
-        <div class="col-md-3">
-            @Html.Label("Kursy")
-            <font color="gray">
-                aktywne @Html.CheckBox("showActivated", true)
-                nieaktywne @Html.CheckBox("showDeactivated", false)
-            </font>
-        </div>
-        <div class="col-md-7">
-            @Html.Label("Szukana fraza")
-            @Html.TextBox("searchString", null, new { @class = "widetextarea", @style = "width:500px" })
-        </div>
-        <div class="col-md-1">
-            <button class="btn" type="button" 
-                onclick="location.href='@Url.Action("List", "Course", new { sortColumn = ViewBag.sortColumn, sortDirection = ViewBag.sortDirection, page = ViewBag.page } )'">
-            Wyczyść</button>
-        </div>
-        <div class="col-md-1" style="float:right;">
-            <button class="btn" type="submit">Szukaj</button>
-        </div>
-    </div>
-}
-
-<p/>
-
 <div class="col-md-12">
-    <table class="table table-striped table-bordered">
-        <tr>
-            <th>
-                @Html.ActionLink("Utworzono", "List", new { sortColumn = "creationDate", sortDirection = ViewBag.sortDirection, page = 1 },
-                new { style = "text-decoration:none; color:black" })
-            </th>
-            <th>
-                @Html.ActionLink("Nazwa", "List", new { sortColumn = "name", sortDirection = ViewBag.sortDirection, page = 1 },
-                new { style = "text-decoration:none; color:black" })
-            </th>
-            <th>
-                Opis
-            </th>
-            <th>
-                @Html.ActionLink("Poziom", "List", new { sortColumn = "proficencyLevel", sortDirection = ViewBag.sortDirection, page = 1 },
-                new { style = "text-decoration:none; color:black" })
-            </th>
-            <th>
-                @Html.ActionLink("Rozpoczęcie", "List", new { sortColumn = "startDate", sortDirection = ViewBag.sortDirection, page = 1 },
-                new { style = "text-decoration:none; color:black" })
-            </th>
-            <th>
-                @Html.ActionLink("Zakończenie", "List", new { sortColumn = "endDate", sortDirection = ViewBag.sortDirection, page = 1 },
-                new { style = "text-decoration:none; color:black" })
-            </th>
-            <th>
-                Liczba godzin
-            </th>
-        </tr>
+    @using (Html.BeginForm())
+    {
+        <div class="row thumbnail col-md-12">
+            <div class="col-md-3">
+                @Html.Label("Kursy:")
+                <font color="gray">
+                    aktywne @Html.CheckBox("showActivated", true)
+                    nieaktywne @Html.CheckBox("showDeactivated", false)
+                </font>
+            </div>
+            <div class="col-md-7">
+                @Html.Label("Szukana fraza:")
+                @Html.TextBox("searchString", null, new { @class = "widetextarea", @style = "width:400px" })
+            </div>
+            <div class="col-md-1">
+                <button type="button"
+                        onclick="location.href='@Url.Action("List", "Course", new { sortColumn = ViewBag.sortColumn, sortDirection = ViewBag.sortDirection, page = ViewBag.page } )'">
+                    Wyczyść
+                </button>
+            </div>
+            <div class="col-md-1" style="float:right;">
+                <button type="submit">Szukaj</button>
+            </div>
+        </div>
+    }
 
-        @foreach (var item in Model)
-        {
+    <p />
 
-            var fontColor = "black";
+    <div class="row col-md-12">
+        <table class="table table-striped table-bordered col-md-12">
+            <tr>
+                <th>
+                    @Html.ActionLink("Utworzono", "List", new { sortColumn = "creationDate", sortDirection = ViewBag.sortDirection, page = 1 },
+            new { style = "text-decoration:none; color:black" })
+                </th>
+                <th>
+                    @Html.ActionLink("Nazwa", "List", new { sortColumn = "name", sortDirection = ViewBag.sortDirection, page = 1 },
+            new { style = "text-decoration:none; color:black" })
+                </th>
+                <th>
+                    Opis
+                </th>
+                <th>
+                    @Html.ActionLink("Poziom", "List", new { sortColumn = "proficencyLevel", sortDirection = ViewBag.sortDirection, page = 1 },
+            new { style = "text-decoration:none; color:black" })
+                </th>
+                <th>
+                    @Html.ActionLink("Rozpoczęcie", "List", new { sortColumn = "startDate", sortDirection = ViewBag.sortDirection, page = 1 },
+            new { style = "text-decoration:none; color:black" })
+                </th>
+                <th>
+                    @Html.ActionLink("Zakończenie", "List", new { sortColumn = "endDate", sortDirection = ViewBag.sortDirection, page = 1 },
+            new { style = "text-decoration:none; color:black" })
+                </th>
+                <th>
+                    Liczba godzin
+                </th>
+            </tr>
 
-            if (!item.IsActive)
+            @foreach (var item in Model)
             {
-                fontColor = "silver";
+
+                var fontColor = "black";
+
+                if (!item.IsActive)
+                {
+                    fontColor = "silver";
+                }
+
+                <tr style="color: @fontColor">
+                    <td>
+                        @item.CreationDate.ToString("yyyy/MM/dd")
+                    </td>
+                    <td>
+                        @Html.ActionLink(item.Name, "Edit", new { id = item.Id })
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Description)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LanguageProficency.Name)
+                    </td>
+                    <td>
+                        @item.StartDate.ToString("yyyy/MM/dd")
+                    </td>
+                    <td>
+                        @item.EndDate.ToString("yyyy/MM/dd")
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.NumberOfHours)
+                    </td>
+                </tr>
             }
 
-            <tr style="color: @fontColor">
-                <td>
-                    @item.CreationDate.ToString("yyyy/MM/dd")
-                </td>
-                <td>
-                    @Html.ActionLink(item.Name, "Edit", new { id = item.Id })
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LanguageProficency.Name)
-                </td>
-                <td>
-                    @item.StartDate.ToString("yyyy/MM/dd")
-                </td>
-                <td>
-                    @item.EndDate.ToString("yyyy/MM/dd")
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NumberOfHours)
-                </td>
-            </tr>
-        }
-
-    </table>
-</div>
-
-<div class="col-md-12">
-    <div class="col-md-6">
+        </table>
     </div>
-    <div class="col-md-2">
-        @Html.PagedListPager(Model, page => Url.Action("List",
-            new { sortColumn = ViewBag.sortColumn, sortDirection = ViewBag.sortDirection, page }))
-    </div>
-    <div class="col-md-4">
+    <div class="col-md-12">
+        <div class="col-md-6">
+        </div>
+        <div class="col-md-2">
+            @Html.PagedListPager(Model, page => Url.Action("List",
+        new { sortColumn = ViewBag.sortColumn, sortDirection = ViewBag.sortDirection, page }))
+        </div>
+        <div class="col-md-4">
+        </div>
     </div>
 </div>
