--- a/LanguageSchool/Views/Course/List.cshtml
+++ b/LanguageSchool/Views/Course/List.cshtml
@@ -6,67 +6,67 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="col-md-12">
+<div class="container-fluid">
     @using (Html.BeginForm())
     {
         <div class="row thumbnail col-md-12">
-            <div class="col-md-3">
-                @Html.Label("Kursy:")
-                <font color="gray">
-                    aktywne @Html.CheckBox("showActivated", true)
-                    nieaktywne @Html.CheckBox("showDeactivated", false)
-                </font>
-            </div>
-            <div class="col-md-7">
-                @Html.Label("Szukana fraza:")
-                @Html.TextBox("searchString", null, new { @class = "widetextarea", @style = "width:400px" })
-            </div>
-            <div class="col-md-1">
-                <button type="button"
-                        onclick="location.href='@Url.Action("List", "Course", new { sortColumn = ViewBag.sortColumn, sortDirection = ViewBag.sortDirection, page = ViewBag.page } )'">
-                    Wyczyść
-                </button>
-            </div>
-            <div class="col-md-1" style="float:right;">
-                <button type="submit">Szukaj</button>
-            </div>
+                <div class="col-md-3">
+                    @Html.Label("Kursy:")
+                    <font color="gray">
+                        aktywne @Html.CheckBox("showActivated", true)
+                        nieaktywne @Html.CheckBox("showDeactivated", false)
+                    </font>
+                </div>
+                <div class="col-md-7">
+                    @Html.Label("Szukana fraza:")
+                    @Html.TextBox("searchString", null, new { @class = "widetextarea", @style = "width:450px" })
+                </div>
+                <div class="col-md-1">
+                    <button type="button"
+                            onclick="location.href='@Url.Action("List", "Course", new { sortColumn = ViewBag.sortColumn, sortDirection = ViewBag.sortDirection, page = ViewBag.page } )'">
+                        Wyczyść
+                    </button>
+                </div>
+                <div class="col-md-1" style="float:right;">
+                    <button type="submit">Szukaj</button>
+                </div>
         </div>
     }
 
     <p />
 
     <div class="row col-md-12">
-        <table class="table table-striped table-bordered col-md-12">
-            <tr>
-                <th>
-                    @Html.ActionLink("Utworzono", "List", new { sortColumn = "creationDate", sortDirection = ViewBag.sortDirection, page = 1 },
+            <table class="table table-striped table-bordered">
+                <tr>
+                    <th>
+                        @Html.ActionLink("Utworzono", "List", new { sortColumn = "creationDate", sortDirection = ViewBag.sortDirection, page = 1 },
             new { style = "text-decoration:none; color:black" })
-                </th>
-                <th>
-                    @Html.ActionLink("Nazwa", "List", new { sortColumn = "name", sortDirection = ViewBag.sortDirection, page = 1 },
+                    </th>
+                    <th>
+                        @Html.ActionLink("Nazwa", "List", new { sortColumn = "name", sortDirection = ViewBag.sortDirection, page = 1 },
             new { style = "text-decoration:none; color:black" })
-                </th>
-                <th>
-                    Opis
-                </th>
-                <th>
-                    @Html.ActionLink("Poziom", "List", new { sortColumn = "proficencyLevel", sortDirection = ViewBag.sortDirection, page = 1 },
+                    </th>
+                    <th>
+                        Opis
+                    </th>
+                    <th>
+                        @Html.ActionLink("Poziom", "List", new { sortColumn = "proficencyLevel", sortDirection = ViewBag.sortDirection, page = 1 },
             new { style = "text-decoration:none; color:black" })
-                </th>
-                <th>
-                    @Html.ActionLink("Rozpoczęcie", "List", new { sortColumn = "startDate", sortDirection = ViewBag.sortDirection, page = 1 },
+                    </th>
+                    <th>
+                        @Html.ActionLink("Rozpoczęcie", "List", new { sortColumn = "startDate", sortDirection = ViewBag.sortDirection, page = 1 },
             new { style = "text-decoration:none; color:black" })
-                </th>
-                <th>
-                    @Html.ActionLink("Zakończenie", "List", new { sortColumn = "endDate", sortDirection = ViewBag.sortDirection, page = 1 },
+                    </th>
+                    <th>
+                        @Html.ActionLink("Zakończenie", "List", new { sortColumn = "endDate", sortDirection = ViewBag.sortDirection, page = 1 },
             new { style = "text-decoration:none; color:black" })
-                </th>
-                <th>
-                    Liczba godzin
-                </th>
-            </tr>
+                    </th>
+                    <th>
+                        Liczba godzin
+                    </th>
+                </tr>
 
-            @foreach (var item in Model)
+                @foreach (var item in Model)
             {
 
                 var fontColor = "black";
@@ -99,18 +99,18 @@
                         @Html.DisplayFor(modelItem => item.NumberOfHours)
                     </td>
                 </tr>
-            }
+                }
 
-        </table>
+            </table>
+        </div>
     </div>
-    <div class="col-md-12">
-        <div class="col-md-6">
-        </div>
-        <div class="col-md-2">
-            @Html.PagedListPager(Model, page => Url.Action("List",
+<div class="col-md-12">
+    <div class="col-md-6">
+    </div>
+    <div class="col-md-2">
+        @Html.PagedListPager(Model, page => Url.Action("List",
         new { sortColumn = ViewBag.sortColumn, sortDirection = ViewBag.sortDirection, page }))
-        </div>
-        <div class="col-md-4">
-        </div>
+    </div>
+    <div class="col-md-4">
     </div>
 </div>
