--- a/LanguageSchool/Views/Course/List.cshtml
+++ b/LanguageSchool/Views/Course/List.cshtml
@@ -9,25 +9,25 @@
 <div class="container-fluid">
     @using (Html.BeginForm())
     {
-        <div class="row thumbnail col-md-12">
-                <div class="col-md-3">
+        <div class="row thumbnail col-xs-12">
+                <div class="col-xs-3">
                     @Html.Label("Kursy:")
                     <font color="gray">
                         aktywne @Html.CheckBox("showActivated", true)
                         nieaktywne @Html.CheckBox("showDeactivated", false)
                     </font>
                 </div>
-                <div class="col-md-7">
+                <div class="col-xs-7">
                     @Html.Label("Szukana fraza:")
                     @Html.TextBox("searchString", null, new { @class = "widetextarea", @style = "width:450px" })
                 </div>
-                <div class="col-md-1">
+                <div class="col-xs-1">
                     <button type="button"
                             onclick="location.href='@Url.Action("List", "Course", new { sortColumn = ViewBag.sortColumn, sortDirection = ViewBag.sortDirection, page = ViewBag.page } )'">
                         Wyczyść
                     </button>
                 </div>
-                <div class="col-md-1" style="float:right;">
+                <div class="col-xs-1" style="float:right;">
                     <button type="submit">Szukaj</button>
                 </div>
         </div>
@@ -35,7 +35,7 @@
 
     <p />
 
-    <div class="row col-md-12">
+    <div class="row col-xs-12">
             <table class="table table-striped table-bordered">
                 <tr>
                     <th>
@@ -104,13 +104,13 @@
             </table>
         </div>
     </div>
-<div class="col-md-12">
-    <div class="col-md-6">
+<div class="col-xs-12">
+    <div class="col-xs-6">
     </div>
-    <div class="col-md-2">
+    <div class="col-xs-2">
         @Html.PagedListPager(Model, page => Url.Action("List",
         new { sortColumn = ViewBag.sortColumn, sortDirection = ViewBag.sortDirection, page }))
     </div>
-    <div class="col-md-4">
+    <div class="col-xs-4">
     </div>
 </div>
