--- a/LanguageSchool/Views/Message/Details.cshtml
+++ b/LanguageSchool/Views/Message/Details.cshtml
@@ -1,35 +1,58 @@
-﻿@model LanguageSchool.Models.Message
+﻿@model LanguageSchool.Models.ViewModels.UserMessageViewModel
 
 @{
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
-
 <div>
-    <h4>Message</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Header)
+            Tytuł:
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Header)
+            @Html.DisplayFor(model => model.Topic)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Contents)
+            Data wysłania:
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SentDate)
+        </dd>
+
+        <dt>
+            Data odczytania:
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ReceivedDate)
+        </dd>
+
+        <dt> 
+            Treść:
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Contents)
         </dd>
-
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+<div class="container w-100 h-100">
+    <div class="row align-items-center h-100">
+        <div class="col-xs-3">
+            <div>
+                <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "Message")'">Moje komunikaty</button>
+            </div>
+        </div>
+        <div class="col-xs-6">
+        </div>
+        <div class="col-xs-3">
+            <div>
+                <button class="btn btn-block btn-danger" type="button" onclick="location.href='@Url.Action("Index", "Message")'">Usuń</button>
+            </div>
+        </div>
+    </div>
+</div>
