--- a/LanguageSchool/Views/Message/Index.cshtml
+++ b/LanguageSchool/Views/Message/Index.cshtml
@@ -6,38 +6,54 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<table class="table">
+<table class="table table-striped table-bordered">
     <tr>
         <th>
-            Data wysłania
+            @Html.ActionLink("Data wysłania", "Index", new { sortColumn = "SentDate", sortDirection = ViewBag.sortDirection, page = 1 },
+                         new { style = "text-decoration:none; color:black" })
         </th>
         <th>
-            Data odczytania
+            @Html.ActionLink("Data odczytania", "Index", new { sortColumn = "ReceivedDate", sortDirection = ViewBag.sortDirection, page = 1 },
+                         new { style = "text-decoration:none; color:black" })
         </th>
         <th>
-            Tytuł
+            @Html.ActionLink("Tytuł", "Index", new { sortColumn = "Topic", sortDirection = ViewBag.sortDirection, page = 1 },
+                         new { style = "text-decoration:none; color:black" })
         </th>
         <th>
             Treść
         </th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.SentDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ReceivedDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Topic)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Contents)
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        var style = "";
+
+        if (item.IsCyclical)
+        {
+            style = "color: Red;";
+        }
+
+        if (!item.HasBeenReceived)
+        {
+            style += "font-weight:bold";
+        }
+
+        <tr style="@style">
+            <td>
+                @Html.DisplayFor(modelItem => item.SentDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ReceivedDate)
+            </td>
+            <td>
+                @Html.ActionLink(item.Topic, "Details", new { userMessageId = item.Id })
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ShortenedContents)
+            </td>
+        </tr>
+    }
 
 </table>
 
