Uniemożliwienie usuwania wiadomości oznaczonych jako ważne

--- a/LanguageSchool/Views/Message/Details.cshtml
+++ b/LanguageSchool/Views/Message/Details.cshtml
@@ -52,27 +52,34 @@
             </div>
             <div class="col-xs-6">
             </div>
-            <div class="col-xs-3">
-                <button class="btn btn-block btn-danger" type="button" data-toggle="modal" data-target="#myModal">Usuń</button>
-                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                    <div class="modal-dialog modal-sm" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                <h4 class="modal-title" id="myModalLabel">Potwierdź usunięcie</h4>
-                            </div>
-                            <div class="modal-body">
-                                Czy na pewno chcesz usunąć tę wiadomość?
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Anuluj</button>
-                                @*<button class="btn btn-block btn-danger" type="button" onclick="location.href='@Url.Action("DeleteConfirmed", "Message", new { id = @Model.Id })'">Usuń</button>*@
-                                <input type="submit" value="Usuń" class="btn btn-danger" />
+            @if (!@Model.IsCyclical)
+            {
+                <div class="col-xs-3">
+                    <button class="btn btn-block btn-danger" type="button" data-toggle="modal" data-target="#myModal">Usuń</button>
+                    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                        <div class="modal-dialog modal-sm" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                    <h4 class="modal-title" id="myModalLabel">Potwierdź usunięcie</h4>
+                                </div>
+                                <div class="modal-body">
+                                    Czy na pewno chcesz usunąć tę wiadomość?
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Anuluj</button>
+                                    <input type="submit" value="Usuń" class="btn btn-danger" />
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            }
+            else
+            {
+                <div class="col-xs-3">
+                </div>
+            }
         </div>
     </div>
 }
