Zmiany dla wysyłki wiadomości

--- a/LanguageSchool/Views/Message/Create.cshtml
+++ b/LanguageSchool/Views/Message/Create.cshtml
@@ -41,7 +41,44 @@
 
         <div class="form-group">
             <div class="control-label col-md-2">
-                <strong>Oznacz jako wiadomość systemową</strong>
+                <strong>Typ wiadomości</strong>
+            </div>
+            <div class="col-md-10">
+                @Html.DropDownList("MessageType", (IEnumerable<SelectListItem>)ViewData["MessageTypes"], new { @onchange = "MessageTypeChanged(this.value)" })
+            </div>
+        </div>
+        <div id="1" style="display: none">
+            Lista osób
+        </div>
+        <div id="2" style="display: none">
+            Lista kursów
+        </div>
+        <div id="3" style="display: none">
+            Lista grup
+        </div>
+        <div id="4" style="display: none">
+            Lista ról
+        </div>
+        <script>
+            function MessageTypeChanged(Id)
+            {
+                var x = document.getElementById(Id);
+
+                if (x.style.display === "none") {
+                    x.style.display = "block";
+                } else {
+                    x.style.display = "none";
+                }
+                //switch (Id)
+                //{
+                //    case (1): window.location.href = "/Controller/Actionmethod?value=" + val;
+                //        break;
+                //}
+            }
+        </script>
+        <div class="form-group">
+            <div class="control-label col-md-2">
+                <strong>Wiadomość systemowa</strong>
             </div>
             <div class="col-md-10">
                 <div class="checkbox">
