Zmiany w rolach na bazie

--- a/LanguageSchool/Views/Message/Create.cshtml
+++ b/LanguageSchool/Views/Message/Create.cshtml
@@ -76,7 +76,7 @@
                 <strong>Rola</strong>
             </div>
             <div class="col-md-10">
-                @Html.DropDownList("Group", (IEnumerable<SelectListItem>)ViewData["MessageTypes"])
+                @Html.DropDownList("Role", (IEnumerable<SelectListItem>)ViewData["MessageTypes"])
             </div>
         </div>
         <script>
