W pełni działająca wysyłka, pewne zmiany na strukturze wiadomości

--- a/LanguageSchool/Views/Message/Details.cshtml
+++ b/LanguageSchool/Views/Message/Details.cshtml
@@ -52,7 +52,7 @@
             </div>
             <div class="col-xs-6">
             </div>
-            @if (!@Model.IsCyclical)
+            @if (!@Model.IsSystem)
             {
                 <div class="col-xs-3">
                     <button class="btn btn-block btn-danger" type="button" data-toggle="modal" data-target="#myModal">Usuń</button>
