--- a/LanguageSchool/Views/Message/Index.cshtml
+++ b/LanguageSchool/Views/Message/Index.cshtml
@@ -29,7 +29,7 @@
     {
         var style = "";
 
-        if (item.IsCyclical)
+        if (item.IsSystem)
         {
             style = "color: Red;";
         }
