--- a/LanguageSchool/Views/Message/Create.cshtml
+++ b/LanguageSchool/Views/Message/Create.cshtml
@@ -102,8 +102,8 @@
             </div>
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.IsCyclical)
-                    @Html.ValidationMessageFor(model => model.IsCyclical, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.IsSystem)
+                    @Html.ValidationMessageFor(model => model.IsSystem, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
