--- a/LanguageSchool/Views/UserData/Create.cshtml
+++ b/LanguageSchool/Views/UserData/Create.cshtml
@@ -1,56 +1,29 @@
-﻿@model LanguageSchool.Models.UserData
+﻿@model LanguageSchool.Models.ViewModels.UserDataViewModel
 
 @{
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
-
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>UserData</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
         <div class="form-group">
-            @Html.LabelFor(model => model.IsDeleted, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-md-2">
+                <strong>Rola</strong>
+            </div>
             <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.IsDeleted)
-                    @Html.ValidationMessageFor(model => model.IsDeleted, "", new { @class = "text-danger" })
-                </div>
+                @Html.DropDownListFor(model => model.RoleId, Model.Roles, new { @class = "form-control" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CreationDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CreationDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CreationDate, "", new { @class = "text-danger" })
+            <div class="control-label col-md-2">
+                <strong>Imię</strong>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DeletionDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DeletionDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DeletionDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.UserId, "UserId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("UserId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
@@ -58,7 +31,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Surname, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-md-2">
+                <strong>Nazwisko</strong>
+            </div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Surname, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Surname, "", new { @class = "text-danger" })
@@ -66,7 +41,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.City, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-md-2">
+                <strong>Miasto</strong>
+            </div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger" })
@@ -74,7 +51,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Street, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-md-2">
+                <strong>Ulica</strong>
+            </div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Street, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Street, "", new { @class = "text-danger" })
@@ -82,7 +61,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.HouseNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-md-2">
+                <strong>Numer domu</strong>
+            </div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.HouseNumber, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.HouseNumber, "", new { @class = "text-danger" })
@@ -90,7 +71,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.HomeNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-md-2">
+                <strong>Numer mieszkania</strong>
+            </div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.HomeNumber, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.HomeNumber, "", new { @class = "text-danger" })
@@ -98,7 +81,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PublicPhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-md-2">
+                <strong>Publiczny numer telefonu</strong>
+            </div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PublicPhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PublicPhoneNumber, "", new { @class = "text-danger" })
@@ -106,7 +91,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PrivatePhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-md-2">
+                <strong>Prywatny numer telefonu</strong>
+            </div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PrivatePhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PrivatePhoneNumber, "", new { @class = "text-danger" })
@@ -114,7 +101,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.EmailAdress, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-md-2">
+                <strong>Adres email</strong>
+            </div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.EmailAdress, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.EmailAdress, "", new { @class = "text-danger" })
@@ -122,7 +111,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Comment, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-md-2">
+                <strong>Komentarz</strong>
+            </div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
@@ -131,7 +122,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Utwórz" class="btn btn-default" />
             </div>
         </div>
     </div>
