--- a/LanguageSchool/Views/UserData/Index.cshtml
+++ b/LanguageSchool/Views/UserData/Index.cshtml
@@ -5,108 +5,32 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
+<table class="table table-striped table-bordered">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.IsDeleted)
+            Użytkownik
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.CreationDate)
+            Numer telefonu
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DeletionDate)
+            Adres email
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Surname)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.City)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Street)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.HouseNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.HomeNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PublicPhoneNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PrivatePhoneNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EmailAdress)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Comment)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.User.Login)
-        </th>
-        <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsDeleted)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreationDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DeletionDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Surname)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.City)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Street)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.HouseNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.HomeNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PublicPhoneNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PrivatePhoneNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EmailAdress)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Comment)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.User.Login)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @item.Name @item.Surname
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PublicPhoneNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EmailAdress)
+            </td>
+        </tr>
+    }
 
 </table>
